gccida/c3/c_expand_end_cond
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/c-common.c:791:6: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if ( if_stack_0[v1].needs_warning ) 
     ^~~~~~~~~~
     if_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/c-common.c:793:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[v1].file, 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/c-common.c:794:1: error: use of undeclared identifier 'if_stack_0'; did you mean 'if_stack'?
if_stack_0[v1].line, 
^~~~~~~~~~
if_stack
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/c-common.c:262:16: note: 'if_stack' declared here
static if_elt *if_stack;
               ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/c_expand_end_cond/src/obj/c-common.o] Error 1
